leptos_macro/tests/view/15_children_missing.stderr
error[E0277]: missing required prop `children` on component `Inner`
  --> tests/view/15_children_missing.rs:10:14
   |
10 |             <Inner concrete_i32=42 generic_fun=|| true>
   |              ^^^^^ missing prop `children`
   |
   = help: the trait `__required_Inner_children` is not implemented for `()`
   = note: all required props must be provided as attributes on the component
help: the trait `__required_Inner_children` is implemented for `(__T,)`
  --> tests/view/15_children_missing.rs:16:1
   |
16 | #[component]
   | ^^^^^^^^^^^^
note: required for `Inner::__PresenceBuilder<(((),), ((),), ())>` to implement `Inner::__CheckPresence`
  --> tests/view/15_children_missing.rs:16:1
   |
16 | #[component]
   | ^^^^^^^^^^^^
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `__check_missing` exists for struct `Inner::__PresenceBuilder<(((),), ((),), ())>`, but its trait bounds were not satisfied
  --> tests/view/15_children_missing.rs:10:14
   |
10 |             <Inner concrete_i32=42 generic_fun=|| true>
   |              ^^^^^
...
16 | #[component]
   | ------------ method `__check_missing` not found for this struct
   |
note: trait bound `(): __required_Inner_children` was not satisfied
  --> tests/view/15_children_missing.rs:16:1
   |
16 | #[component]
   | ^^^^^^^^^^^^
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)
